[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_utilities"
version = "0.0.2"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com"},
]
dependencies = []
description = "Package containing utility functions for GPT apps."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sikauk-rad/llm-utilities"
